feat: add coordinator API
